# SuisenSha

./: .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  clean_setup.ps1  clean_setup.sh  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
artifacts/: item_embeddings.npy  sasrec_model.pt
data/: movies.csv  user_sequences.pkl
docs/: GUIDE.md
src/pipeline/: __init__.py  __main__.py  batch.py  cache.py  cli.py  config.py
src/pipeline/api/: dependencies.py  main.py  models.py
src/pipeline/data/: __init__.py  loader.py
src/pipeline/evaluation/: __init__.py  metrics.py
src/pipeline/models/: __init__.py  embedding.py  rag.py  sequential.py
src/pipeline/ui/: app.py
src/suisensha.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
tests/: test_api.py  test_cache.py  test_data_loader.py  test_metrics.py
